--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,30 +4,33 @@ import ExperienceItem from "./ExperienceItem.astro";
 const EXPERIENCE = [
 	{
 		date: "Currently...",
-		title: "Web Developer at Sitio Uno",
+		title: "Full-stack Developer",
+		company: "Sitio Uno",
 		description:
 			"Creating multiple website, using React, Redux, Next, MaterialUI, TypeScript, Wordpress. The websites are an internal use admin panel and a public website called Be Soul.",
 		// link: "#",
 	},
 	{
 		date: "August 2022 - August 2023",
-		title: "Web Developer at Net24/7",
+		title: "Web Developer",
+		company: "Net24/7",
 		description:
 			"Create a website, using React, Redux, Next, MaterialUI, TypeScript. The websites was a financial application called Wao.",
 	},
 	{
 		date: "January 2022 - August 2022",
-		title: "Frontend Developer Oha Education",
+		title: "Frontend Developer",
+		company: "Oha Education",
 		description:
 			"Create a website, using React, Redux and Tailwind. The website was a educational platform called OhaEducation.",
 	},
 ];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700 ml-3">
+<ol class="relative mt-16">
 	{
 		EXPERIENCE.map((experience) => (
-			<li class="mb-10 ms-4">
+			<li class="">
 				<ExperienceItem {...experience} />
 			</li>
 		))
