--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,40 @@
+---
+const currentYear = new Date().getFullYear();
+---
+
 <footer
-	class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full max-w-[1120px] mx-auto mb-10"
+	class="opacity-80 m-4 mt-16 px-5 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
 >
 	<div
-		class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+		class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
 	>
-		<span class="text-sm text-yellow-200/50 sm:text-center"
-			>© 2024 <a
+		<span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+			>© {currentYear}
+			<a
 				href="https://linkedin.com/in/gustavoisacura"
 				target="_blank"
 				class="hover:underline">Gustavo Isacura</a
 			>.
 		</span>
-		<ul
-			class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90 sm:mt-0"
+		<span
+			>Based of the design of <a
+				class="underline"
+				href="https://midu.dev/"
+				target="_blank">midudev</a
+			></span
 		>
+		<ul
+			class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
+		>
+			<!-- <li>
+				<a href="/#about-me" class="hover:underline me-4 md:me-6">About</a>
+			</li> -->
 			<li>
-				<a href="#" class="hover:underline me-4 md:me-6">About</a>
-			</li>
-			<li>
-				<a href="#" class="hover:underline">Contact</a>
+				<a
+					id="contacto"
+					href="mailto:gisacurab@gmail.com"
+					class="hover:underline">Contact</a
+				>
 			</li>
 		</ul>
 	</div>
