--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,103 @@
+---
+import ThemeToggle from "./ThemeToggle.astro";
+
+const navItems = [
+	{
+		title: "Experience",
+		label: "experience",
+		url: "/#experience",
+	},
+	{
+		title: "Projects",
+		label: "projects",
+		url: "/#projects",
+	},
+	// {
+	// 	title: "About me",
+	// 	label: "about-me",
+	// 	url: "#about",
+	// },
+	{
+		title: "Contact",
+		label: "Contact",
+		url: "mailto:gisacurab@gmail.com",
+	},
+];
+---
+
 <header
-	class="flex justify-center items-center px-3 md:px-0 py-5 w-full max-w-[1120px] mx-auto"
+	class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2"
 >
 	<nav
-		class="flex flex-row gap-x-4 md:gap-x-10 opacity-80 text-sm md:text-base lg:text-lg xl:text-xl"
+		class="flex px-3 text-sm font-medium rounded-full text-gray-600 dark:text-gray-200 justify-center items-center"
 	>
-		<a href="#top">Home</a>
-		<a href="#about">About</a>
-		<a href="#experience">Experience</a>
-		<a href="#projects">Projects</a>
-		<a href="#contact">Contact</a>
+		{
+			navItems.map((item) => (
+				<a
+					class="relative block px-2 py-2 transition hover:text-sky-500 dark:hover:text-sky-400"
+					aria-label={item.label}
+					href={item.url}
+				>
+					{item.title}
+				</a>
+			))
+		}
+		<ThemeToggle />
 	</nav>
 </header>
+
+<script>
+	document.addEventListener("astro:page-load", () => {
+		const sections = document.querySelectorAll("section");
+		const navItems = document.querySelectorAll("header nav a");
+
+		const callback = (entries: any[]) => {
+			entries.forEach((entry) => {
+				if (entry.isIntersecting) {
+					navItems.forEach((item) => {
+						if (item.getAttribute("aria-label") == entry.target.id) {
+							item.classList.add("text-yellow-500");
+						} else {
+							item.classList.remove("text-yellow-500");
+						}
+					});
+				}
+			});
+		};
+
+		const observer = new IntersectionObserver(callback, {
+			root: null,
+			rootMargin: "0px",
+			threshold: 0.3,
+		});
+
+		sections.forEach((section) => {
+			observer.observe(section);
+		});
+
+		// Cleanup function
+		document.onvisibilitychange = () => {
+			if (document.visibilityState === "hidden") {
+				observer.disconnect();
+			} else {
+				sections.forEach((section) => {
+					observer.observe(section);
+				});
+			}
+		};
+	});
+</script>
+
+<style>
+	nav {
+		animation: nav-shadown 1s linear both;
+		animation-timeline: scroll();
+		animation-range: 0 100px;
+	}
+
+	@keyframes nav-shadown {
+		to {
+			@apply shadow-lg ring-1 backdrop-blur dark:bg-gray-800/90 bg-white/50 ring-white/10;
+		}
+	}
+</style>
