--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,8 +1,9 @@
 <a
-	class="flex gap-x-2 text-xs md:text-sm lg:text-base rounded-full border border-white/10 w-max justify-center items-center py-1 px-2 lg:py-2 lg:px-4 bg-white/5 hover:scale-110 hover:bg-white/10 transition"
-	href={Astro.props.href}
+	class="inline-flex items-center justify-center gap-2 px-4 py-1 text-gray-800 transition bg-gray-100 border border-gray-300 rounded-full dark:bg-gray-800 dark:border-gray-600 dark:text-white focus-visible:ring-sky-500/80 text-md hover:bg-gray-900 hover:border-gray-700 group max-w-fit hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
 	target="_blank"
-	rel="noopener"
+	rel="noopener noreferrer"
+	role="link"
+	{...Astro.props}
 >
 	<slot />
 </a>
