--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Badge from "../components/Badge.astro";
-import LinkedIn from "../icons/LinkedIn.astro";
-import Github from "../icons/Github.astro";
-import Mail from "../icons/Mail.astro";
-import SocialPill from "../components/SocialPill.astro";
+
 import Experience from "../components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import Briefcase from "../icons/Briefcase.astro";
 import Code from "../icons/Code.astro";
 import Projects from "../components/Projects.astro";
+import Hero from "../components/Hero.astro";
 ---
 
 <Layout
@@ -17,61 +14,32 @@ import Projects from "../components/Projects.astro";
 	description="Contratame como desarrollador web. Tengo 2 años de experiencia y soy especialista en crear aplicaciones únicas. Desde Valencia, Venezuela. Gustavo Isacura."
 >
 	<main class="px-4">
-		<SectionContainer class="pt-10 pb-14 lg:pt-44 lg:pb-24">
-			<img class="rounded-full size-12 mb-4" src="" alt="logo" />
-			<h1
-				class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
-			>
-				Hey, i am Gustavo Isacura <div class="flex justify-center items-center">
-					<a
-						href="https://linkedin.com/in/gustavoisacura"
-						target="_blank"
-						rel="noopener"
-						class="flex justify-center items-center"
-					>
-						<Badge>Open to work</Badge>
-					</a>
-				</div>
-			</h1>
-			<h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">
-				<span>2 years of experience.</span>
-				<span class="text-sky-300/90">Web Developer</span>. <span
-					class="text-yellow-200/90">From Valencia, Venezuela</span
-				>. <span class="opacity-75"
-					>Specialized in creating unique applications.</span
+		<SectionContainer class="py-16 md:py-36">
+			<Hero>
+				<slot />
+			</Hero>
+		</SectionContainer>
+
+		<div class="space-y-24">
+			<SectionContainer id="experience">
+				<h2
+					class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
 				>
-			</h2>
+					<Briefcase class="size-8" />
+					Working experience
+				</h2>
+				<Experience />
+			</SectionContainer>
 
-			<nav class="flex gap-4 mt-8 flex-wrap">
-				<SocialPill href="https://linkedin.com/in/gustavoisacura">
-					<LinkedIn class="size-4 lg:size-6" />
-					Linkedin
-				</SocialPill>
-				<SocialPill href="https://github.com/GIsacura">
-					<Github class="size-4 lg:size-6" />
-					GitHub
-				</SocialPill>
-				<SocialPill href="mailto:gisacurab@gmail.com">
-					<Mail class="size-4 lg:size-6" />
-					gisacurab@gmail.com
-				</SocialPill>
-			</nav>
-		</SectionContainer>
-
-		<SectionContainer id="experience">
-			<h2 class="text-2xl font-semibold pb-6 flex gap-x-3 items-center">
-				<Briefcase class="size-8" />
-				Working experience
-			</h2>
-			<Experience />
-		</SectionContainer>
-
-		<SectionContainer id="projects">
-			<h2 class="text-2xl font-semibold pb-6 flex gap-x-3 items-center">
-				<Code class="size-8" />
-				Projects
-			</h2>
-			<Projects />
-		</SectionContainer>
+			<SectionContainer id="projects">
+				<h2
+					class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+				>
+					<Code class="size-8" />
+					Projects
+				</h2>
+				<Projects />
+			</SectionContainer>
+		</div>
 	</main></Layout
 >
