--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
 		<ViewTransitions />
 	</head>
 
-	<body>
+	<body class="relative text-black dark:text-white">
 		<div
 			class="top-0 h-full w-full bg-gray-50 dark:bg-gray-950
       bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
