Adding online chat project

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -20,9 +20,8 @@ const EXPERIENCE = [
 	{
 		date: "January 2022 - August 2022",
 		title: "Frontend Developer",
-		company: "Oha Education",
-		description:
-			"Create a website, using React, Redux and Tailwind. The website was a educational platform called OhaEducation.",
+		company: "Freelancer",
+		description: "Create multiple websites, using React, Redux and Tailwind.",
 	},
 ];
 ---
