--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -67,6 +67,15 @@ const PROJECTS = [
 		github: "https://github.com/GIsacura/video_games_data",
 		tags: [TAGS["NEXT"], TAGS["TAILWIND"], TAGS["NEST"], TAGS["MONGO"]],
 	},
+	{
+		title: "Online Chat",
+		description:
+			"Real-time online chat, in which multiple users can connect and send messages. The app is built with Next js with Tailwind CSS and Nest Js with Socket.io.",
+		image: "/assets/screencapture-online-chat.webp",
+		link: "",
+		github: "https://github.com/GIsacura/online-chat",
+		tags: [TAGS["NEXT"], TAGS["TAILWIND"], TAGS["NEST"]],
+	},
 ];
 ---
 
