--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -72,7 +72,7 @@ const PROJECTS = [
 		description:
 			"Real-time online chat, in which multiple users can connect and send messages. The app is built with Next js with Tailwind CSS and Nest Js with Socket.io.",
 		image: "/assets/screencapture-online-chat.webp",
-		link: "",
+		link: "https://online-chat-seven.vercel.app/",
 		github: "https://github.com/GIsacura/online-chat",
 		tags: [TAGS["NEXT"], TAGS["TAILWIND"], TAGS["NEST"]],
 	},
