--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const currentYear = new Date().getFullYear();
 			>.
 		</span>
 		<span
-			>Based of the design of <a
+			>Based on the design of <a
 				class="underline"
 				href="https://midu.dev/"
 				target="_blank">midudev</a
