New project added

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -62,6 +62,14 @@ const TAGS = {
 
 const PROJECTS = [
 	{
+		title: "Be Soul - Legacy planning app",
+		description:
+			"Web app that allows users to create and share digital legacies and memorials. The FrontEnd is built in React Js, Redux and Material UI.",
+		image: "/assets/screencapture-be-soul.webp",
+		link: "https://besoul.app",
+		tags: [TAGS["REACT"]],
+	},
+	{
 		title: "Url Shortener",
 		description:
 			"Web app to generate short urls. The FrontEnd is built with Next Js and Tailwind CSS. The BackEnd is also built with Next Js and PostgreSQL.",
@@ -70,15 +78,15 @@ const PROJECTS = [
 		github: "https://github.com/GIsacura/url-shortener",
 		tags: [TAGS["REACT"], TAGS["NEXT"], TAGS["TAILWIND"], TAGS["POSTGRESQL"]],
 	},
-	{
-		title: "Video Games Searcher",
-		description:
-			"Web app to search info about video games with info up to 2020. The app is built with Next js with Tailwind CSS and Nest Js with Mongo DB.",
-		image: "/assets/screencapture-video-games-data.webp",
-		link: "https://video-games-data.vercel.app/",
-		github: "https://github.com/GIsacura/video_games_data",
-		tags: [TAGS["NEXT"], TAGS["TAILWIND"], TAGS["NEST"], TAGS["MONGO"]],
-	},
+	// {
+	// 	title: "Video Games Searcher",
+	// 	description:
+	// 		"Web app to search info about video games with info up to 2020. The app is built with Next js with Tailwind CSS and Nest Js with Mongo DB.",
+	// 	image: "/assets/screencapture-video-games-data.webp",
+	// 	link: "https://video-games-data.vercel.app/",
+	// 	github: "https://github.com/GIsacura/video_games_data",
+	// 	tags: [TAGS["NEXT"], TAGS["TAILWIND"], TAGS["NEST"], TAGS["MONGO"]],
+	// },
 	{
 		title: "Online Chat",
 		description:
